--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,43 @@
-web:
-   build: ./docker/web
-   environment:
-     - ALLOW_OVERRIDE=true
-   ports:
-     - "80:80"
-   links:
-     - db
-   volumes:
-     - ./app:/var/www/html/
+version: '3'
+services:
+  web:
+     build:
+        context: ./
+        dockerfile: ./docker/web/Dockerfile
+     environment:
+       - ALLOW_OVERRIDE=true
+     ports:
+       - "80:80"
+     links:
+       - db
+     volumes:
+       - ./app:/var/www/html/
 
-db:
-  build: ./docker/mariadb
-  restart: always
-  environment:
-    MYSQL_ROOT_PASSWORD: root
-    MYSQL_USER: root
-    MYSQL_PASSWORD: root
-    MYSQL_DATABASE: cartiamotwig
-  ports:
-    - "3306:3306"
-phpmyadmin:
-  image: corbinu/docker-phpmyadmin
-  links:
-    - db:mysql
-  ports:
-    - "8181:80"
-  environment:
-    MYSQL_USERNAME: admin
-    MYSQL_ROOT_PASSWORD: test
+
+
+  db:
+    build: ./docker/mariadb
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root
+      MYSQL_DATABASE: cartiamotwig
+    ports:
+      - "3306:3306"
+  phpmyadmin:
+    image: corbinu/docker-phpmyadmin
+    links:
+      - db:mysql
+    ports:
+      - "8181:80"
+    environment:
+      MYSQL_USERNAME: admin
+      MYSQL_ROOT_PASSWORD: test
+      MYSQL_PORT_3306_TCP_ADDR: db
+
+  composer:
+      image: composer
+      volumes:
+        - ./app:/app
+      command: install
