--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,11 @@ services:
         context: ./
         dockerfile: ./docker/web/Dockerfile
      environment:
-       - ALLOW_OVERRIDE=true
+        #- ALLOW_OVERRIDE=true
+        MYSQL_USER: ${MYSQL_USER}
+        MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+        MYSQL_DATABASE: ${MYSQL_DATABASE}
+        MYSQL_HOST: ${MYSQL_HOST}
      ports:
        - "80:80"
      links:
@@ -18,10 +22,10 @@ services:
   db:
     build: ./docker/mariadb
     environment:
-      MYSQL_ROOT_PASSWORD: pssrtcdn
-      MYSQL_USER: root
-      MYSQL_PASSWORD: pssrtcdn
-      MYSQL_DATABASE: echidnadb
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
     ports:
       - "3306:3306"
     container_name: echidna_db
@@ -33,8 +37,8 @@ services:
     ports:
       - "8181:80"
     environment:
-      MYSQL_USERNAME: root
-      MYSQL_ROOT_PASSWORD: pssrtcdn
+      MYSQL_USERNAME: ${MYSQL_USER}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_PORT_3306_TCP_ADDR: db
 
   composer:
