Added env variables

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 COMPOSE_CONVERT_WINDOWS_PATHS=1
+
+####DATABASE SECTION
+MYSQL_HOST=db
+MYSQL_ROOT_PASSWORD=pssrtcdn
+MYSQL_USER=root
+MYSQL_PASSWORD=pssrtcdn
+MYSQL_DATABASE=echidnadb
