--- a/app/composer.json
+++ b/app/composer.json
@@ -20,6 +20,7 @@
     "autoload": {
         "psr-4": {
             "backend\\"    :   "backend",
+            "console\\"    :   "console",
             "frontend\\"    :   "frontend",
             "applications\\"    :   "applications/",
             "controllers\\" :   "controllers/",
